Separate deterministic benchmark evidence from runtime telemetry